fix: macos exports